--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">my-app</string>
-    <string name="title_activity_main">my-app</string>
-    <string name="package_name">com.example.app</string>
-    <string name="custom_url_scheme">com.example.app</string>
+    <string name="app_name">Sample Capacitor</string>
+    <string name="title_activity_main">Sample Capacitor</string>
+    <string name="package_name">com.capacitor.example</string>
+    <string name="custom_url_scheme">com.capacitor.example</string>
 </resources>
